[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "datavendor-bot"
version = "2.0.0"
description = "Machine-to-Machine Crypto Data Marketplace — Pay per call in Bitcoin satoshis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

keywords = [
  "bitcoin",
  "lightning",
  "satoshis",
  "crypto",
  "api",
  "trading-signals",
  "machine-to-machine",
  "m2m",
  "openapi",
  "mcp",
  "cryptocurrency",
  "price-prediction",
  "rest-api",
  "autonomous-bot",
  "zero-dependency"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Web Environment"
]

[project.urls]
Homepage       = "https://web-production-a2ec.up.railway.app"
"Live API"     = "https://web-production-a2ec.up.railway.app"
"OpenAPI Spec" = "https://web-production-a2ec.up.railway.app/.well-known/openapi.json"
"MCP Server"   = "https://web-production-a2ec.up.railway.app/.well-known/mcp.json"
"AI Plugin"    = "https://web-production-a2ec.up.railway.app/.well-known/ai-plugin.json"
Repository     = "https://github.com/YOUR_USERNAME/datavendor-bot"
"Bug Tracker"  = "https://github.com/YOUR_USERNAME/datavendor-bot/issues"

[project.scripts]
datavendor-bot = "main:main"

[tool.setuptools]
py-modules = ["main"]
